--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,9 +12,13 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Get branch name
-        id: get-branch
-        uses: ypicard/get-branch-name-github-action@v1
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v5.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          default_bump: minor
+          dry_run: true
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -24,12 +28,15 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: ./build-context
-          file: ./build-context/Dockerfile
-          platforms: linux/amd64,linux/arm/v7
-          push: true
-          tags: |
-            wagoautomation/ssh-client:${{ steps.get-branch.outputs.branch }}
+      - run: |
+          echo ${{ steps.tag_version.outputs.new_tag }}
+      # - name: Build and push
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: ./build-context
+      #     file: ./build-context/Dockerfile
+      #     platforms: linux/amd64,linux/arm/v7
+      #     push: true
+      #     tags: |
+      #       wagoautomation/ssh-client:${{ steps.tag_version.outputs.new_tag }}
+      #       wagoautomation/ssh-client:latest
