--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -28,15 +28,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - run: |
-          echo ${{ steps.tag_version.outputs.new_tag }}
-      # - name: Build and push
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     context: ./build-context
-      #     file: ./build-context/Dockerfile
-      #     platforms: linux/amd64,linux/arm/v7
-      #     push: true
-      #     tags: |
-      #       wagoautomation/ssh-client:${{ steps.tag_version.outputs.new_tag }}
-      #       wagoautomation/ssh-client:latest
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./build-context
+          file: ./build-context/Dockerfile
+          platforms: linux/amd64,linux/arm/v7
+          push: true
+          tags: |
+            wagoautomation/ssh-client:${{ steps.tag_version.outputs.new_tag }}
+            wagoautomation/ssh-client:latest
