--- a/build-context/Dockerfile
+++ b/build-context/Dockerfile
@@ -3,4 +3,5 @@ LABEL authors="<Dirk.Meihoefer@wago.com>,<Sergei.Ikkert@wago.com>"
 RUN apk add --no-cache \
     openssh-client \
     ca-certificates \
+    sshpass \
     bash
