--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -2,6 +2,11 @@ name: Docker Image CI
 
 on:
   push:
+    branches:
+      - main
+    paths:
+      - build-context
+      - .github/workflows/dockerimage.yml
   workflow_dispatch:
 jobs:
   build:
