Fixed buid trigger.

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - build-context
+      - build-context/*
       - .github/workflows/dockerimage.yml
   workflow_dispatch:
 jobs:
